# pdns-recursor

./: .gitignore  CALLBACK_CHAIN.md  CMakeLists-msys2.txt  CMakeLists-test.txt  CMakeLists.txt  DISABLED_ZONE_FUNCTIONS_EXPLANATION.md  EXPLANATION_SIZEOF_AND_HEADER_SEPARATION.md  INTEGRATION_PLAN.md  MINIMAL_SETUP_REQUIREMENTS.md  MSYS2-BUILD-INSTRUCTIONS.md  PROTOBUF_EXPLANATION.md  QUERY_FLOW_EXPLANATION.md  README-WINDOWS.md  README.md  SERVICE_INITIALIZATION_AND_UDP_FLOW.md  SOCKET_ARCHITECTURE_EXPLANATION.md  SOCKET_CREATION_COMPARISON.md  SO_REUSEPORT_WINDOWS.md  STATUS_COMPARISON.md  STUBS_REPLACEMENT_PLAN.md  TESTING_MAKEUDPSERVERSOCKETS.md  TTL_HANDLING_EXPLANATION.md  UDP_FLOW_COMPARISON.md  UDP_MTASKER_EXPLANATION.md  USING_COMBOWRITER_MINIMAL.md  WHAT_WE_USE_FROM_UPSTREAM.md  WHY_CANT_WE_CHANGE_SIZEOF.md  WHY_NO_COMBOWRITER.md  WIN32_BLOCKS_REVIEW.md  WINDOWS_FIXES_SUMMARY.md  WINDOWS_PADDING_ISSUE_EXPLANATION.md  WINDOWS_UDP_ISSUE_ANALYSIS.md  arguments.cc  arguments.hh  changes_for_Udp.md  config.h.in  dns.hh  dns_random.hh  dns_tables.cc  dnsheader_writer_proxy.hh  (+70 more)
Specs/: BUILD-INSTRUCTIONS.md  DOCUMENTATION-INDEX.md  FILE-STRUCTURE-STRATEGY.md  IMPLEMENTATION-PLAN-SPRINTS.md  MSYS2-QUICK-START.md  MSYS2-SETUP-COMPLETE.md  POC-PROGRESS.md  PRD-PowerDNS-Cross-Platform.md  README.md  SCRUM-LOG.md  SETUP-MSYS2-CURSOR.md  TCP_DNSSEC_IMPLEMENTATION_PLAN.md  TCP_WINDOWS_FILE_RELATIONSHIPS.md  TCP_WINDOWS_IMPLEMENTATION_PLAN.md  TCP_WINDOWS_SPRINT_SUMMARY.md  TECHNICAL-ARCHITECTURE.md  implementation-plan.md  install-msys2.ps1  unbound-windows-analysis.md  visual-studio-build-guide.md
ext/arc4random/: arc4random.hh  arc4random_windows.cc
ext/luawrapper/include/: LuaContext.hpp
rust/: lib.rs.h
